service-manifest/platform/bases/frontend/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      restartPolicy: Always
