service-manifest/platform/bases/frontend/service.yml
kind: Service
apiVersion: v1
metadata:
  name: frontend
  annotations:
    konghq.com/plugins: "rl-by-ip"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: frontend
